# Minecraft-Server-Installer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  download.sh  release.sh
.cargo/: config
src/: config.rs  downloader.rs  downloaderror.rs  main.rs  os.rs  servertype.rs
src/downloaders/: bungeecord.rs  downloader.rs  downloaderror.rs  fabric.rs  forge.rs  geyser.rs  java.rs  mod.rs  neoforge.rs  paper.rs  purpur.rs  vanilla.rs  velocity.rs  waterfall.rs
tests/: download_module_tests.rs
