[package]
name = "minecraft-server-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tar = "0.4"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.7"
futures-util = "0.3.14"
zip = "0.6"
zip-extensions = "0.6"
async-trait = "0.1.77"
thiserror = "1.0"