[package]
name = "minecraft_server_installer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tar = "0.4"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.7"
futures-util = "0.3.14"
zip = "0.6"
zip-extensions = "0.6"
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8.8"
serde = { version = "1.0.196", features = ["derive"] }