[package]
name = "minecraft_server_installer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["blocking", "json", "stream"] }
tar = "0.4"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.7"
futures-util = "0.3.14"
zip = "2.2.0"
zip-extensions = "0.8.1"
openssl = { version = "0.10.66", features = ["vendored"] }
toml = "0.8.8"
serde = { version = "1.0.196", features = ["derive"] }
public-ip = "0.2"
semver = "1.0.21"
xml2json-rs = "1.0.1"
async-trait = "0.1.77"
